--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ server:
   port: 8080
 spring:
   datasource:
-    url: "jdbc:h2:file:./test.db"
+    url: "jdbc:h2:file:./test1.db"
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
